# git-cors-proxy-py

./: CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
cors_proxy/: __init__.py  allow_request.py  cli.py  config.py  middleware.py  server.py
