[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cors-proxy"
version = "0.1.0"
description = "Proxy clone and push requests for the browser (Python port of @isomorphic-git/cors-proxy)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0,<4.0",
    "psutil>=5.9.0,<7.0",
    "python-daemon>=3.0.0,<4.0",
]

[project.scripts]
cors-proxy = "cors_proxy.cli:main"

[project.urls]
Homepage = "https://github.com/isomorphic-git/cors-proxy"

[tool.hatch.build.targets.wheel]
packages = ["cors_proxy"]